--- a/package.json
+++ b/package.json
@@ -4,34 +4,38 @@
   "description": "webpack练习",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "bable": "webpack --config webpack.es6.js",
-    "sass": "webpack --config webpack.sass.js"
+	"test": "echo \"Error: no test specified\" && exit 1",
+	"build": "webpack --config webpack.config.js",
+	"watch": "webpack --watch --config webpack.config.js",
+	"bable": "webpack --config webpack.es6.js",
+	"sass": "webpack --config webpack.sass.js",
+	"start": "webpack-dev-server --config webpack.config.js --inline --hot --open",
+	"es6": "webpack-dev-server --config webpack.es6.js --inline --open"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yyman001/webpack-demo.git"
+	"type": "git",
+	"url": "git+https://github.com/yyman001/webpack-demo.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yyman001/webpack-demo/issues"
+	"url": "https://github.com/yyman001/webpack-demo/issues"
   },
   "homepage": "https://github.com/yyman001/webpack-demo#readme",
   "devDependencies": {
-    "ansi-regex": "^3.0.0",
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.9",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-monitor": "^1.0.13"
+	"ansi-regex": "^3.0.0",
+	"autoprefixer": "^7.1.6",
+	"babel-core": "^6.26.0",
+	"babel-loader": "^7.1.2",
+	"babel-preset-es2015": "^6.24.1",
+	"css-loader": "^0.28.7",
+	"extract-text-webpack-plugin": "^3.0.2",
+	"node-sass": "^4.7.2",
+	"postcss-loader": "^2.0.9",
+	"sass-loader": "^6.0.6",
+	"style-loader": "^0.19.0",
+	"webpack": "^3.8.1",
+	"webpack-dev-server": "^2.9.5",
+	"webpack-monitor": "^1.0.13"
   }
 }
